# MeshOpt

./: CMakeLists.txt  README.md  README.txt
BL/: BLMesh.cpp  BLMesh.h  BoundaryLayer.cpp  BoundaryLayer.cpp.backup  BoundaryLayer.h  BoundaryLayer.h.backup  BoundaryLayerSubdivider.cpp  BoundaryLayerSubdivider.h  CMakeLists.txt  DefaultNodeSpacingEvaluator.cpp  DefaultNodeSpacingEvaluator.h  NodeParamsOnGeometry.cpp  NodeSpacingEvaluator.h  OptimizeBL.cpp  OptimizeBLSubmesh.cpp
Common/: BLParameterList.cpp  BLParameterList.h  CMakeLists.txt  CaseParameterList.cpp  CaseParameterList.h  HModel.cpp  HModel.h  HighOrderParameterList.cpp  HighOrderParameterList.h  MeshOptConfig.cpp  MeshOptConfig.h  main.cpp
Debugging/: CMakeLists.txt  vector_shared_ptr.cpp
Debugging/LinearElasticity/: DebugLinearElasticity.cpp  ElasticityAssembler.cpp  ElasticitySystem.cpp  ElasticitySystem.h  LinearElasticityAssembler.cpp  LinearElasticityAssembler.h  LinearElasticitySolve.cpp  LinearElasticityUpdateMesh.cpp  NonlinearElasticityAssembler.cpp  NonlinearElasticitySetUp.cpp  NonlinearElasticitySolve.cpp  NonlinearElasticitySolver.h
Demo/SymmetricSphere/: MeshOpt.config  SphereSymmetry.geo  SphereSymmetry.msh  blmesh.msh.msh
Demo/rae2822Airfoil/: MeshOpt.config  blmesh.msh.msh  rae2822.geo  rae2822.msh
FiniteElement/: CMakeLists.txt
FiniteElement/InterpolationPoints/: CMakeLists.txt  InterpolationPoints.cpp  InterpolationPoints.h  Makefile  RefinedInterpolation.cpp  RefinedInterpolation.h  cmake_install.cmake
FiniteElement/Math/: CMakeLists.txt  FEFieldOperator.h  Field.h  Makefile  cmake_install.cmake  setOperators.cpp  setOperators.h
FiniteElement/Polynomials/: CMakeLists.txt  JacobiPolynomials.cpp  JacobiPolynomials.h  KoornwinderPolynomials.cpp  KoornwinderPolynomials.h  Makefile  PolynomialBasis.cpp  PolynomialBasis.h  cmake_install.cmake
FiniteElement/Quadrature/: CMakeLists.txt  Makefile  Quadrature.cpp  Quadrature.h  cmake_install.cmake  config.h  elem-info.h  expression.h  phg.h  quad-gauss.h  quad-permu.h  quad.cpp  quad.h
FiniteElement/ShapeFunctions/: CMakeLists.txt  Makefile  NodeIndexer.cpp  NodeIndexer.h  NodeInterpolator.cpp  NodeInterpolator.h  ShapeFunction.cpp  ShapeFunction.h  ShapeFunctionFactory.cpp  ShapeFunctionFactory.h  ShapeFunctionMatrices.cpp  ShapeFunctionMatrices.h  ShapeFunction_decl.h  cmake_install.cmake
FiniteElement/Solvers/: Ifpack2Solver.cpp  Ifpack2Solver.h  LinearSolver.h  SolverParams.h
HighOrder/: CMakeLists.txt  HighOrderMeshGenerator.cpp  HighOrderMeshGenerator.h  HighOrderMeshGeneratorAndOptimizer.cpp  HighOrderMeshGeneratorAndOptimizer.h
Mesh/: CMakeLists.txt
Mesh/Elements/: ActiveMEl.cpp  ActiveMEl.h  CEl.h  CMakeLists.txt  CompEl.cpp  CompEl.h  El1D.cpp  El1D.h  El2D.cpp  El2D.h  El3D.cpp  El3D.h  ElementAnalyzer.cpp  ElementAnalyzer.h  ElementAnalyzerManager.cpp  ElementAnalyzerManager.h  MEl_to_ActiveEl.cpp  MEl_to_ActiveEl.h  Mel.cpp  Mel.h  MeshTypedefs.h  OptEl.cpp  OptEl.h  OptElDev.cpp  OptElManager.cpp  OptElManager.h  OptElParam.cpp  OptElParam.h  elementFactory.cpp  elementFactory.h
Mesh/Geometry/: CMakeLists.txt  Geo.cpp  Geo.h  GeometryContainer.h  OCC_Handler.cpp  OCC_Handler.h  OCC_standard_includes.h  myEdge.cpp  myEdge.h  myFace.cpp  myFace.h  myVertex.cpp  myVertex.h
Mesh/IO/: CMakeLists.txt  GMSHReader.cpp  GMSHWriter.cpp  GeometryReader.cpp  GeometryReader.h  MatlabMeshWriter.cpp  MatlabMeshWriter.h  MeshReader.h  MeshWriter.h
Mesh/Nodes/: CMakeLists.txt  MNode.cpp  Mnode.h  nodeFactory.cpp  nodeFactory.h
Mesh/Src/: CMakeLists.txt  ChildGenerator.cpp  ChildGenerator.h  DGMesh.h  ElementMapper.cpp  ElementMapper.h  ElementShapeFunctionManager.cpp  ElementShapeFunctionManager.h  GlobalDefines.h  HDGMesh.cpp  HDGMesh.h  HighOrderMeshGenerator.cpp  LocalMesh.h  MeshAnalyzer.cpp  MeshAnalyzer.h  MeshConnectivity.h  MeshContainer.cpp  MeshContainer.h  NodeReParameterizer.cpp  NodeReParameterizer.h  ParametricCoordinateEvaluator.cpp  ParametricCoordinateEvaluator.h  generateHOMesh.cpp  getMeshConnectivity.cpp
Optimization/: CMakeLists.txt  GlobalMeshOptimizer.cpp  GlobalMeshOptimizer.h  LocalMeshMeritEvaluator.cpp  LocalMeshMeritEvaluator.h  MeshOptimizer.cpp  MeshOptimizer.h  SubmeshMeritEvaluator.cpp  SubmeshMeritEvaluator.h  SubmeshOptimizer.cpp  SubmeshOptimizer.h
ParameterList/: CMakeLists.txt
ParameterList/Utility/: CMakeLists.txt  ConfigFileReader.cpp  ConfigFileReader.h  (+6 more)
